[package]
name = "agentkey"
version = "0.2.0"
edition = "2021"
description = "Locate and print Claude/Codex OAuth tokens stashed on this machine."
license = "MIT"

[lib]
name = "agentkey"
path = "src/lib.rs"

[[bin]]
name = "agentkey"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
dirs = "5"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
